# pro02.0_smartdumpster

./: .gitignore  README.md  smartdumpster_config.sh
Instaladores/: 99-libphidget22.rules  SmartDumpster_Config.sh
ModeloCAD/: SmartDumpster_CAD.urdf  casterWheel_backMerge_link.stl  casterWheel_back_link.stl  casterWheel_frontMerge_link.stl  casterWheel_front_link.stl  casterWheel_merge_link.stl  caster_wheel_link.stl  right_wheel_link.stl  wheel_left_link.stl  wheel_right_link.stl
SmartdumpsterCAD_Simu/: SmartDumpster.iam  base_link.stl  caster_wheel_link.ipt  wheel_left_link.stl  wheel_right_link.ipt  wheel_right_link.stl
SmartdumpsterCAD_Simu/CAD/: base_link.ipt  wheel_left_link.ipt
SmartdumpsterCAD_Simu/OldVersions/: SmartDumpster.0001.iam  base_link.0002.ipt  caster_wheel_link.0001.ipt  wheel_left_link.0002.ipt  wheel_right_link.0002.ipt
bag/rosbag2_2026_06_15-17_16_39/: metadata.yaml
smartdumpster2_ws/src/smartdumpster_bringup/: CMakeLists.txt  package.xml
smartdumpster2_ws/src/smartdumpster_controller/: CMakeLists.txt  package.xml
smartdumpster2_ws/src/smartdumpster_description/: CMakeLists.txt  package.xml
smartdumpster2_ws/src/smartdumpster_firmware/: CMakeLists.txt  package.xml  smartdumpster_interface.xml
smartdumpster2_ws/src/smartdumpster_firmware/firmware/smartdumpster_localWiFi/: smartdumpster_localWiFi.ino
smartdumpster2_ws/src/smartdumpster_firmware/include/smartdumpster_firmware/: smartdumpster_interface.hpp
smartdumpster2_ws/src/smartdumpster_firmware/launch/: hardware_interface.launch.py
smartdumpster2_ws/src/smartdumpster_firmware/smartdumpster_firmware/: mpu6050_driver.py
smartdumpster2_ws/src/smartdumpster_firmware/src/: smartdumpster_interface.cpp
(+37 files in other folders)
